- Agent data reconciliation block size and timeout can be configured
- New agent parameters System.CPU.CurrentUsage and System.CPU.CurrentUsage(*)
- SSH subagent (for collecting data and executing actions via SSH)
- Zone ID can be set for agent in SNMP proxy mode
- Zones has common default proxy node for all protocols
- Zone's proxy node can be placed inside that zone
- Management console
	- New editors for Agent Config Policy and Log Parser Policy. 
	- DCI summary tables with empty menu path not shown in object context menu
	- Fixed glitches in table value view
- Fixed issues: #92, #906, #909, #942, #959, #992, #999, #1006, #1051, #1096, #1100, #1159, #1187, #1191, #1230, #1237, #1245, #1254, #1261, #1263, #1273, #1275


*
* 2.0.5
*

- Data collection script can return null to indicate data collection error
- Added option to set type of each varbind in nxsnmpset
- Fixed memory leak in PostgreSQL database driver
- New attributes "source" and "sourceId" in NXSL class "Event"
- New method toJson() in NXSL class "Event
- LVM monitoring parameters on AIX
- Added option to get normalized server thread pool load average
- Fixed bug in self-monitoring termplates
- Management console
        - Fixed possible deadlock when executing server script
        - Fixed area charts on dashboards
        - "Interactive" option for line chart dashboard elements
- Fixed issues: #1018, #1039, #1239, #1250, #1255


*
* 2.0.4
*

- New parameters in Linux platform subagent to get additional CPU information (frequency, model, etc.)
- Fixed bugs in LLDP based network topology discovery
- Correct notifications on threshold script errors
- Option to use last known value for cluster data aggregation in case of data collecion failure
- Added server configuration parameter to ignore syslog message timestamps and always use server time
- Added option to disconnect existing sessions of same user on login